--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="assets/javascript/app.js"></script>
+        <script src="assets/javascript/app2.js"></script>
 
 
 </body>
