more js added (missing next Q link)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <div id="game">
                     <h2>Guess the national animal of the following countries: </h2>
-                    <p id="remaining-time" class="lead">Remaining Time: <span id="timer"></span></p>
+                    <p id="timeRemaining" class="lead">Remaining Time: <span id="timer"></span></p>
                     <p id="question" class="lead"></p>
                 </div>
                 <div id="results">
