--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
 
     <div class="container">
-        <div class="header text-center clearfix">
-            <h1 class="text-muted">National animal Trivia games</h1>
+        <div class="header text-center ">
+            <h1 >National animal Trivia games</h1>
         </div>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <div id="game">
+                <div id="trivia">
                     <h2>Guess the national animal of the following countries: </h2>
                     <p id="timeRemaining" class="lead">Remaining Time: <span id="timer"></span></p>
                     <p id="question" class="lead"></p>
@@ -30,7 +30,7 @@
 
             <div class="row">
                 <div id="black" class="col-4"></div>
-                <div id="choices" class="text-center">
+                <div id="choose" class="text-center">
                     <button id="start" class="btn btn-info btn-lg">Start Game</button>
                     <div id="options">
 
