final changes made

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                     <p id="question" class="lead"></p>
                 </div>
                 <div id="results">
+                    <h3>Results:</h3>
+                    
+                    <p id="correct-answer">Correct Answers: </p>
+                    <p id="incorrect-answer">Incorrect Answers: </p>
+                    <p id="unansweredQ">Unanswered: </p>
                 </div>
             </div>
 
